--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "react": "^19.1.1",
+    "react-datepicker": "^8.9.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5"
   },
